@@ -1,6 +1,6 @@
 # This file is part of yle-dl.
 #
-# Copyright 2010-2024 Antti Ajanki and others
+# Copyright 2010-2025 Antti Ajanki and others
 #
 # Yle-dl is free software: you can redistribute it and/or modify it
 # under the terms of the GNU General Public License as published by
@@ -30,6 +30,7 @@ class AreenaApiProgramInfo:
     episode_title: str
     description: Optional[str]
     flavors: List[StreamFlavor]
+    thumbnail: Optional[str]
     subtitles: List[Subtitle]
     duration_seconds: Optional[int]
     available_at_region: str
